tests/NormalTests/paczka1/small_fuzzy/85315267.err
Error in line 4: yq0hYUR A759 47,9
Error in line 5: yq0hYUR A505 89,3
Error in line 10: yq0hYUR A77 50,4
Error in line 16: aq7syQmQ A77 10,83
